--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -4,7 +4,6 @@ android {
     final sdk = rootProject.ext.sdk
 
     compileSdkVersion sdk.compileSdk
-    buildToolsVersion sdk.buildTools
 
     defaultConfig {
         minSdkVersion sdk.minSdk
@@ -33,11 +32,12 @@ repositories {
 }
 
 dependencies {
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     compile fileTree(include: ['*.jar'], dir: 'libs')
 
     final glideVersion = '4.5.0'
     implementation "com.github.bumptech.glide:glide:$glideVersion"
-    implementation 'com.android.support:appcompat-v7:27.0.2'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
 
     /* Development */
     implementation project(':rximagepicker')
