--- a/imagepicker/build.gradle
+++ b/imagepicker/build.gradle
@@ -47,8 +47,8 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:$glideVersion"
 
     final supportLibraryVersion = '27.0.2'
-    implementation "com.android.support:recyclerview-v7:$supportLibraryVersion"
-    implementation("com.android.support:appcompat-v7:$supportLibraryVersion") {
+    implementation 'androidx.recyclerview:recyclerview:1.0.0-beta01'
+    implementation('androidx.appcompat:appcompat:1.0.0-beta01') {
         exclude module: 'animated-vector-drawable'
         exclude module: 'support-media-compat'
     }
