--- a/imagepicker/build.gradle
+++ b/imagepicker/build.gradle
@@ -2,11 +2,11 @@ apply plugin: 'com.android.library'
 
 android {
 
-    compileSdkVersion 27
+    compileSdkVersion 28
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
     }
@@ -28,7 +28,6 @@ android {
     }
 
     resourcePrefix "ef_"
-    buildToolsVersion '27.0.3'
 }
 
 task sourcesJar(type: Jar) {
@@ -43,10 +42,10 @@ artifacts {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
-    final glideVersion = '4.7.1'
+    final glideVersion = '4.8.0-SNAPSHOT'
     implementation "com.github.bumptech.glide:glide:$glideVersion"
 
-    implementation 'androidx.recyclerview:recyclerview:1.0.0-beta01'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0-rc01'
     implementation('androidx.appcompat:appcompat:1.0.0-beta01') {
         exclude module: 'animated-vector-drawable'
         exclude module: 'support-media-compat'
