--- a/imagepicker/build.gradle
+++ b/imagepicker/build.gradle
@@ -41,11 +41,8 @@ artifacts {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-
-    final glideVersion = '4.8.0-SNAPSHOT'
-    implementation "com.github.bumptech.glide:glide:$glideVersion"
-
-    implementation 'androidx.recyclerview:recyclerview:1.0.0-rc02'
+    implementation "com.github.bumptech.glide:glide:4.8.0"
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation('androidx.appcompat:appcompat:1.0.0-beta01') {
         exclude module: 'animated-vector-drawable'
         exclude module: 'support-media-compat'
