--- a/imagepicker/build.gradle
+++ b/imagepicker/build.gradle
@@ -5,7 +5,7 @@ android {
     compileSdkVersion 28
 
     defaultConfig {
-        minSdkVersion 14
+        minSdkVersion 18
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -43,7 +43,7 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "com.github.bumptech.glide:glide:4.8.0"
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
-    implementation('androidx.appcompat:appcompat:1.0.0-beta01') {
+    implementation('androidx.appcompat:appcompat:1.0.2') {
         exclude module: 'animated-vector-drawable'
         exclude module: 'support-media-compat'
     }
