--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -2,11 +2,11 @@ apply plugin: 'com.android.application'
 
 android {
 
-    compileSdkVersion 27
+    compileSdkVersion 28
 
     defaultConfig {
-        minSdkVersion 14
-        targetSdkVersion 27
+        minSdkVersion 18
+        targetSdkVersion 28
 
         applicationId "com.esafirm.imagepicker.sample"
 
@@ -31,12 +31,12 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
 
     final glideVersion = '4.5.0'
     implementation "com.github.bumptech.glide:glide:$glideVersion"
-    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
 
     /* Development */
     implementation project(':imagepicker')
